feat(Styles): Add final style;

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,21 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Playball&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+  <link rel="icon" type="image/svg+xml" href="/assets/images/logo/logo.svg">
+  <meta name="theme-color" content="#33ff5a">
+
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Traheja">
+  <meta property="og:title" content="Stolarska Radionica Traheja">
+  <meta property="og:description" content="Unikatni namještaj i enterijeri.">
+  <meta property="og:url" content="https://traheja.vercel.app/">
+  <meta property="og:image" content="https://traheja.vercel.app/assets/images/logo/footer-logo.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Stolarska Radionica Traheja">
+  <meta name="twitter:description" content="Unikatni namještaj i enterijeri.">
+  <meta name="twitter:image" content="https://traheja.vercel.app/assets/images/logo/footer-logo.png">
 </head>
 <body>
   <app-root></app-root>
