--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    window.onerror = function (msg, url, line, col, error) {
+      var el = document.createElement('pre');
+      el.style.cssText = 'position:fixed;left:0;top:0;right:0;background:#ffebe9;color:#b71c1c;padding:12px;z-index:99999;font:12px/1.4 monospace;white-space:pre-wrap;';
+      el.textContent = 'JS error: ' + msg + '\n' + (error && error.stack ? error.stack : (url+':'+line+':'+col));
+      document.body.appendChild(el);
+    };
+  </script>
 </body>
 </html>
