feat(Script): Test script for errors on iphone;

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,15 @@
   <meta name="twitter:image" content="https://traheja.vercel.app/assets/images/logo/footer-logo.png">
 </head>
 <body>
+<script>
+  window.addEventListener('error', e => {
+    const el = document.createElement('pre');
+    el.style.cssText='position:fixed;left:0;top:0;right:0;background:#ffebe9;color:#b71c1c;padding:12px;z-index:99999;font:12px/1.4 monospace;white-space:pre-wrap;';
+    el.textContent = `JS error in: ${e.filename}:${e.lineno}\n${e.message}`;
+    document.body.appendChild(el);
+  }, true);
+</script>
+
   <app-root></app-root>
   <script>
     window.onerror = function (msg, url, line, col, error) {
