--- a/src/index.html
+++ b/src/index.html
@@ -23,25 +23,15 @@
   <meta name="twitter:title" content="Stolarska Radionica Traheja">
   <meta name="twitter:description" content="Unikatni namještaj i enterijeri.">
   <meta name="twitter:image" content="https://traheja.vercel.app/assets/images/logo/footer-logo.png">
+
+  <link rel="preload"
+        as="image"
+        href="/assets/images/gallery/Poslovni prostori/Gorenje and Hisense Studio/cover.webp"
+        imagesrcset="/assets/images/gallery/Poslovni prostori/Gorenje and Hisense Studio/cover-600.webp 600w, /assets/images/gallery/Poslovni prostori/Gorenje and Hisense Studio/cover-1200.webp 1200w, /assets/images/gallery/Poslovni prostori/Gorenje and Hisense Studio/cover-1800.webp 1800w"
+        imagesizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 33vw"
+        fetchpriority="high">
 </head>
 <body>
-<script>
-  window.addEventListener('error', e => {
-    const el = document.createElement('pre');
-    el.style.cssText='position:fixed;left:0;top:0;right:0;background:#ffebe9;color:#b71c1c;padding:12px;z-index:99999;font:12px/1.4 monospace;white-space:pre-wrap;';
-    el.textContent = `JS error in: ${e.filename}:${e.lineno}\n${e.message}`;
-    document.body.appendChild(el);
-  }, true);
-</script>
-
   <app-root></app-root>
-  <script>
-    window.onerror = function (msg, url, line, col, error) {
-      var el = document.createElement('pre');
-      el.style.cssText = 'position:fixed;left:0;top:0;right:0;background:#ffebe9;color:#b71c1c;padding:12px;z-index:99999;font:12px/1.4 monospace;white-space:pre-wrap;';
-      el.textContent = 'JS error: ' + msg + '\n' + (error && error.stack ? error.stack : (url+':'+line+':'+col));
-      document.body.appendChild(el);
-    };
-  </script>
 </body>
 </html>
